[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/Bug.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.19318, 20.3927 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.16478, 20.8745 )

[node name="Bug" type="KinematicBody2D"]
scale = Vector2( 4.4, 3.11385 )
collision_layer = 8
collision_mask = 9
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 400.0

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 10.7011 )
scale = Vector2( 1, 0.665591 )
texture = ExtResource( 2 )

[node name="DetectionRight" type="Area2D" parent="."]
position = Vector2( 42.5, -0.642292 )
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRight"]
position = Vector2( -11.1932, 11.4007 )
shape = SubResource( 2 )

[node name="DetectionLeft" type="Area2D" parent="."]
position = Vector2( -30.9091, -0.642292 )
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionLeft"]
position = Vector2( -0.0284023, 11.2401 )
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -29.5455, 31.1511, -10, -10.5978, 11.1364, -10.2767, 30, 31.1511 )

[connection signal="area_entered" from="DetectionRight" to="." method="_on_DetectionRight_area_entered"]
[connection signal="area_exited" from="DetectionRight" to="." method="_on_DetectionRight_area_exited"]
[connection signal="area_entered" from="DetectionLeft" to="." method="_on_DetectionLeft_area_entered"]
[connection signal="area_exited" from="DetectionLeft" to="." method="_on_DetectionLeft_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
